--- a/course5/w4/gmane/gline.htm
+++ b/course5/w4/gmane/gline.htm
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <script type="text/javascript" src="gline.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
